[tool.poetry]
name = "the-alium"
version = "0.1.0"
description = "Generate satirical AI news with AI"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
pytz = "^2023.3"
cloudinary = "^1.33.0"
tweepy = "^4.14.0"
python-dotenv = "^1.0.0"
numpy = "^1.24.3"
scikit-learn = "^1.2.2"
modal = "^0.65.48"
litellm = "^1.53.1"
together = "^1.3.5"
markdown = "^3.7"
jinja2 = "^3.1.4"
pytest-playwright = "^0.6.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
