[tool.uv]
dev-dependencies = [
    "ipykernel<7.0.0,>=6.25.2",
]

[project]
authors = [
    {name = "Your Name", email = "you@example.com"},
]
requires-python = "<3.12,>=3.9"
dependencies = [
    "requests<3.0.0,>=2.31.0",
    "pytz<2024.0,>=2023.3",
    "cloudinary<2.0.0,>=1.33.0",
    "tweepy<5.0.0,>=4.14.0",
    "python-dotenv<2.0.0,>=1.0.0",
    "numpy<2.0.0,>=1.24.3",
    "scikit-learn<2.0.0,>=1.2.2",
    "modal<1.0.0,>=0.65.48",
    "litellm<2.0.0,>=1.53.1",
    "together<2.0.0,>=1.3.5",
    "markdown<4.0,>=3.7",
    "jinja2<4.0.0,>=3.1.4",
    "pytest-playwright<1.0.0,>=0.6.2",
]
name = "the-alium"
version = "0.1.0"
description = "Generate satirical news with AI"
readme = "README.md"